--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,21 +228,18 @@ h3 {
     font-size: 17px;
     line-height: 1.3;
 }
-/*Reach Out styles start*/
-.contact-info {
-    background-color: #024e76;
+
+/*Reach Out Style Start*/
+.contact {
     text-align: center;
+    background: #024e76;
 }
 
-.contact-info img {
-    text-align: center;
-}
-
-.contact-info h2 {
+.contact h2 {
     color: #fce138;
 }
 
-.contact-info iframe {
+.contact iframe {
     width: 400px;
     height: 400px;
   }
@@ -255,3 +252,21 @@ h3 {
     margin: 30px 0 0 60px;
     color: white;
 }
+
+.contact-info h3 {
+    color:#fce138;
+    font-size: 32px;
+}
+
+.contact-info p, .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+}
+
+.contact-info a {
+    color: #fce138;
+}
+
+/*Reach Out Styles End */
