--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,30 +144,27 @@ h3 {
 /*Hero Styles Ends*/
 
 /*What We Do Styling*/
-.intro {
-    text-align: center;
-}
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
 .section-title {
     font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
+    color: #024e76;    
     border-bottom: 3px solid;
-    display: inline-block;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -202,10 +199,6 @@ h3 {
     font-size: 38px;
 }
 
-.trainers {
-    text-align: center;
-}
-
 .trainer {
     width: 900px;
     margin: 0 auto 30px auto;
@@ -233,6 +226,10 @@ h3 {
     text-align: right;
 }
 
+.flex-row {
+    display: flex;
+}
+
 .trainer-bio h3 {
     font-size: 32px;
     margin-top: 8px;
@@ -251,7 +248,6 @@ h3 {
 
 /*Reach Out Style Start*/
 .contact {
-    text-align: center;
     background: #024e76;
 }
 
